package maidsafe.transport.protobuf;

message Endpoint {
  required bytes ip = 1;
  required int32 port = 2;
}

message Contact {
  optional Endpoint endpoint = 1;
  repeated bytes local_ips = 2;
  optional int32 local_port = 3;
  optional Endpoint rendezvous = 4;
  optional bool tcp443 = 5;
  optional bool tcp80 = 6;
  optional bool prefer_local = 7;
}

message ConnectRequest {
  required bool rendezvous = 1;
}

message ConnectResponse {
  required bool rendezvous = 1;
}

message WrapperMessage {
  required int32 msg_type = 1;
  required bytes payload = 2;
  optional bytes message_signature = 3;
}

message ManagedEndpointMessage {
  optional Endpoint endpoint = 1;
  optional bool result = 2;
  optional int32 message_id = 3;
  optional bytes identifier = 4;
  optional int32 frequency = 5;
  optional int32 retry_count = 6;
  optional int32 retry_frequency = 7;
}

message NatDetectionRequest {
  repeated bytes local_ips = 1;
  required int32 local_port = 2;
  optional bool full_detection = 3;
}

message NatDetectionResponse {
  optional Endpoint endpoint = 1;
  required int32 nat_type = 2;
}

message ProxyConnectRequest {
  required Endpoint endpoint = 1;
  required bool rendezvous_connect = 2;
  optional Endpoint rendezvous = 3;
}

message ProxyConnectResponse {
  required bool result = 1;
}

message ForwardRendezvousRequest {
  required Endpoint receiver_endpoint = 1;
}

message ForwardRendezvousResponse {
  required Endpoint receiver_rendezvous_endpoint = 1;
}

message RendezvousRequest {
  required Endpoint proxy_endpoint = 1;
}

message RendezvousAcknowledgement {
  required Endpoint originator_endpoint = 1;
}
